Fixing Bookmarks overlapping with echo-strings because of absolute positioning (also fixing pageWidthSelectors Css which didnt have this problem because of pure luck)

--- a/code/smarty/templates/administrator/css/general.css
+++ b/code/smarty/templates/administrator/css/general.css
@@ -535,7 +535,7 @@ p.inputError {
 }
 
 #pageWidthSelector {
-	position: absolute;
+	position: relative;
 	float:right;
 	top: 0px;
 	right: 10px;
@@ -543,8 +543,8 @@ p.inputError {
 }
 
 #adminBookmarks {
-	position: absolute;
-	float:right;
+	position: relative;
+	float:left;
 	top: 0px;
 	left: 10px;
 	margin: 15px;
